# LLMTEST

./: .gitignore  .init  Cortex-3 PLAN.txt  LICENSE  Nouveau Document texte (4).txt  README.md  cortex3.py  cortex3_analysis.py  cortex3_attribution.py  cortex3_autoregressive.py  cortex3_certificates.py  cortex3_cycle.py  cortex3_experiments.py  cortex3_frontier.py  cortex3_future.py  cortex3_improvement.py  cortex3_inference.py  cortex3_ledgers.py  cortex3_llm.py  cortex3_memory.py  cortex3_microtrain.py  cortex3_objective.py  cortex3_phases.py  cortex3_regrowth.py  cortex3_reporting.py  cortex3_selection.py  cortex3_sleep.py  cortex3_ternary.py  pyproject.toml  requirements-cuda-cu128.txt  test_creation_chatgpt.md
docs/: ARCHITECTURE_SELF_CRITIQUE.md  CORTEX_PHASE_REPORT_SCHEMA.json  IMPLEMENTATION_STATUS.md  LLM_TRAINING_PHASE_INTERACTIONS.md  PIPELINE.md  ROADMAP.md
experiments/: c4_cuda_large_manifest.json  c4_local_cuda_manifest.json  wikitext_cuda_validation.json
tests/: test_autoregressive_decoder.py  test_causal_attribution.py  test_certificates.py  test_cognitive_memory.py  test_cortex3.py  test_cycle_modules.py  test_frontier_discovery.py  test_future_contracts.py  test_inference.py  test_llm_pretraining.py  test_microtrain.py  test_objective_metrics.py  test_plan_experiments.py  test_recursive_improvement.py  test_regrowth.py  test_reporting_and_ternary.py  test_sleep_phase.py
tools/: benchmark_learned_memory_policy.py  benchmark_ternary_kernel.py  cuda_extension_smoke.py  launch_llm_ddp.py  run_cuda128_extension_smoke.ps1  run_cycle_report.py  (+2 more)
(+3 files in other folders)
